test new bson DB

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
   "categories.json": "780eee41f5c2ad41298c3d514ceeffd9", 
-  "dev-python/packages.json": "d94cbc5544856f495d7df5e863ea42e0"
+  "dev-python/packages.bson": "2b9b8868f844136f0913c14221815eb6", 
+  "metadata.json": "7753aca28fcf1eb5471716382af4f8e3"
 }
